Add keyboard shortcut

--- a/src/locale/en/locale.cfg
+++ b/src/locale/en/locale.cfg
@@ -1,5 +1,8 @@
 [shortcut-name]
 sonaxaton-nightvision-toggle=Toggle nightvision equipment
 
+[controls]
+sonaxaton-nightvision-toggle=Toggle nightvision equipment
+
 [sonaxaton-nightvision-toggle]
 disabled=__1__ (disabled)
