Update to 2.0, add disabled description

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -6,3 +6,4 @@ sonaxaton-nightvision-toggle=Toggle nightvision equipment
 
 [sonaxaton-nightvision-toggle]
 disabled=__1__ (disabled)
+disabled-description=__1__ has been disabled. Use __CONTROL__sonaxaton-nightvision-toggle__ to re-enable it, or remove it from the equipment grid.
